# alx-low_level_programming

./: README.md
0x00-hello_world/: 101-quote.c  4-puts.c  6-size.c  size32  size64
0x01-variables_if_else_while/: .101-print_comb4.c.swp  0-positive_or_negative  0-positive_or_negative.c  1-last_digit.c  100-print_comb3  100-print_comb3.c  101-print_comb4  101-print_comb4.c  102-print_comb5  102-print_comb5.c  2-print_alphabet  2-print_alphabet.c  3-print_alphabets.c  4-print_alphabt  4-print_alphabt.c  5-print_numbers.c  6-print_numberz  6-print_numberz.c  7-print_tebahpla  7-print_tebahpla.c  8-print_base16  8-print_base16.c  9-print_comb  9-print_comb.c  a.out
0x02-functions_nested_loops/: .7-print_last_digit.c.swp  0-putchar.c  1-alphabet.c  10-add.c  100-times_table  100-times_table.c  101-main.c  101-natural  101-natural.c  102-fib  102-fibonacci.c  103-fib  103-fibonacci.c  104-fib  104-fibonacci.c  11-98  11-print_to_98.c  2-print_alphabet_x10.c  3-islower.c  5-sign.c  7-last_digit  7-main.c  7-print_last_digit.c  8-24_hours.c  9-times_table  9-times_table.c  a.out  main.h
0x03-debugging/: 1-main.c  3-convert_day.c  3-main_b  3-print_remaining_days.c  README.md  positive_or_negative.c
0x04-more_functions_nested_loops/: 1-isdigit.c  10-print_triangle.c  10-triangles  100-prime_factor  100-prime_factor.c  101-print_number.c  101-print_numbers  2-mul.c  3-print_numbers.c  4-print_most_numbers.c  5-more_numbers.c  6-print_line.c  7-diagonals  7-print_diagonal.c  8-print_square.c  8-squares  9-fizz_buzz  9-fizz_buzz.c  main.h
0x05-pointers_arrays_strings/: 0-reset_to_98.c  1-swap.c  2-strlen.c  4-print_rev  4-print_rev.c  5-rev_string  5-rev_string.c  6-puts2.c  7-puts_half  7-puts_half.c  8-print_array.c  9-strcpy  9-strcpy.c  main.h
0x06-pointers_arrays_strings/: 0-strcat.c  1-strncat  100-rot13.c  101-print_number.c  101-print_numbers  102-magic  103-add  103-infinite_add.c  104-buffer  104-print_buffer.c  2-strncpy  2-strncpy.c  4-rev_array.c  5-string_toupper  5-string_toupper.c  6-cap  6-cap_string.c  7-1337  7-leet.c  main.h
0x07-pointers_arrays_strings/: 0-memset.c  1-memcpy.c  2-strchr  2-strchr.c  3-strspn.c  5-strstr  5-strstr.c  7-print_chessboard.c  8-print_diagsums  8-print_diagsums.c
0x08-recursion/: 0-puts_recursion.c  1-print_rev_recursion.c  100-is_palindrome.c  100-palindrome  101-wildcmp  101-wildcmp.c  2-strlen_recursion.c  3-factorial  3-factorial.c  4-pow  4-pow_recursion.c  5-sqrt  5-sqrt_recursion.c  6-is_prime_number.c  6-prime  CMakeLists.txt  main.c  main.h
0x09-static_libraries/: 0-isupper.c  100-atoi.c  2-strchr.c  2-strncpy.c  3-puts.c  3-strcmp.c  3-strspn.c  4-strpbrk.c  6-abs.c  9-strcpy.c  CMakeLists.txt  README.md  _atoi.c  _isalpha.c  _strcat.c  _strcmp.c  _strncat.c  _strspn.c
0x0A-argc_argv/: 0-whatsmyname.c  1-args.c  100-change.c  2-args.c  3-mul.c  4-add.c  CMakeLists.txt  add  change  mul  mynewnameis
0x0B-malloc_free/: .1-strdup.c.swp  0-create_array.c  1-strdup.c  100-argstostr.c  101-main.c  101-strtow.c  2-str_concat.c  3-alloc_grid.c  3-main.c  4-free_grid.c  CMakeLists.txt  README.md  a  args  c  f  g  main.h  s  strtow
0x0C-more_malloc_free/: 0-malloc_checked.c  1-main.c  1-string_nconcat  1-string_nconcat.c  100-realloc  100-realloc.c  101-mul  101-mul.c  2-calloc  2-calloc.c  3-array_range  3-array_range.c  3-main.c  CMakeLists.txt  README.md  main.h
0x0D-preprocessor/: 2-main.c  3-function_like_macro.h  CMakeLists.txt  README.md
0x0E-structures_typedef/: 1-init_dog.c  2-print_dog.c  4-main.c  4-new_dog.c  CMakeLists.txt  c  dog.h  e  f
0x0F-function_pointers/: 1-array_iterator.c  2-int_index.c  3-calc.h  3-get_op_func.c  3-main.c  3-op_functions.c
0x10-variadic_functions/: 0-sum_them_all.c  1-print_numbers.c  2-print_strings.c  3-print_all.c  CMakeLists.txt  a  b  c  d  variadic_functions.h
0x12-singly_linked_lists/: 0-print_list.c  1-list_len.c  100-first.c  2-add_node.c  3-add_node_end.c  4-free_list.c  CMakeLists.txt  c  d  e  lists.h
0x13-more_singly_linked_lists/: .9-insert_nodeint.c.swp  0-print_listint.c  1-listint_len.c  10-delete_nodeint.c  100-reverse_listint.c  101-print_listint_safe.c  102-free_listint_safe.c  102-main.c  103-find_loop.c  2-add_nodeint.c  3-add_nodeint_end.c  4-free_listint.c  5-free_listint2.c  6-pop_listint.c  7-get_nodeint.c  8-sum_listint.c  9-insert_nodeint.c  CMakeLists.txt  e  f  g  h  i  j  k  l  lists.h  m  n  o
0x14-bit_manipulation/: 0-binary_to_uint.c  1-print_binary.c  2-get_bit.c  3-set_bit.c  4-clear_bit.c  5-flip_bits.c  CMakeLists.txt  README.md  a  d  e  f  main.h
0x15-file_io/: 0-read_textfile.c  1-create_file.c  2-append_text_to_file.c  README.md  a  main.h
0x17-doubly_linked_lists/: 0-print_dlistint.c  1-dlistint_len.c  2-add_dnodeint.c  3-add_dnodeint_end.c  4-free_dlistint.c  5-get_dnodeint.c  6-sum_dlistint.c  7-insert_dnodeint.c  8-delete_dnodeint.c  CMakeLists.txt  README.md  lists.h
0x1A-hash_tables/: 0-hash_table_create.c  100-sorted_hash_table.c  2-key_index.c  3-hash_table_set.c  4-hash_table_get.c  5-hash_table_print.c  6-hash_table_delete.c  6-main.c  CMakeLists.txt  README.md  hash_tables.h
0x1E-search_algorithms/: 0-linear  0-linear.c  0-main.c  1-binary  1-binary.c  1-main.c  104-advanced_binary  104-advanced_binary.c  search_algos.h
